Fix the z-index of the elements in the WebHUD

--- a/modules/WebHUD/static/css/navigation.css
+++ b/modules/WebHUD/static/css/navigation.css
@@ -92,7 +92,7 @@ div.top-bar {
 #overlay.dim {
     opacity: .9;
     top: 0;
-    z-index: 1000;
+    z-index: 1001;
 }
 
 body > .container{
