--- a/modules/WebHUD/static/css/style.css
+++ b/modules/WebHUD/static/css/style.css
@@ -60,7 +60,7 @@
     position: fixed;
     right: 0;
     bottom: 0;
-    z-index: 10;
+    z-index: 980;
     padding: 0 0 3px;
     margin-right: 20px;
 }
@@ -90,7 +90,7 @@
     top: 50px;
     bottom: 0;
     left: 0;
-    z-index: 15;
+    z-index: 1001;
     width: 25%;
     overflow-x: hidden;
     overflow-y: auto;
@@ -143,7 +143,7 @@
     right: 25%;
     width: 50%;
     transition: all .2s ease-in-out;
-    z-index: 100;
+    z-index: 980;
 }
 .modal-header .close {
     font-size: 16px;
